[package]
name = "claude-archiver"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite   = { version = "0.32", features = ["bundled"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap       = { version = "4", features = ["derive"] }
anyhow     = "1"
walkdir    = "2"
dirs       = "5"
